
Mercurial Source Control & Bootstrapper
----------------------
* Sourcecontrol & Bootstrapper implementation for Mercurial (hg) http://www.selenic.com/mercurial/wiki/ (CC-638). Submitted by Jerome Lacoste.

ModificationSet
----------------------
* Changed ModificationSet to use Progress Signaling API to report when sleeping due to modifications found during Quiet Period.

PVCS
----------------------
* Add support to check for changes against promotion group (CC-717); make thread-safe (CC-583); fix quoting (CC-655).  Patch by Shane Genschaw.

SVNLabelIncrementer
----------------------
* New label incrementer to update label based on SVN revision number (CC-716).  Submitted by Ketan Padegaonkar.

TeamFoundationServer source control
----------------------
* Fix compatibility with Microsoft Visual Studio Team Foundation Server 2008 (CC-735). Submitted by Martin Woodward.

Documentation
======================
* Add missing docs for "timeout" attributes on Maven and Maven2 builders.
* Fix old reference to launch via cruisecontrol.jar (replace with cruisecontrol-launcher.jar) in gettingstartedsroucedist.html. Reported by Xeno Campanoli
* Add documentation for the Rake Builder (which has existed for some time, but had no docs).

reporting
======================
* Fix "Building (since)" time on build summary page to show start of build time (instead of last progress message update time). (CC-740) Fix suggested by EJ Ciramella.
* Show progress message as tooltip over Status cells on build summary page while building. Also show time until next build while waiting.
* Added AbstractXslOutputWidget to support writing widgets for arbitrary XSL.  Also provide AntOutputWidget that shows Ant output. (CC-718) Submitted by Ketan Padegaonkar.

CruiseControl Release Notes - 2.7.1

general
======================
* Upgraded Ant that is distributed with CruiseControl to Ant version 1.7.0.
* Fix source version cruisecontrol.sh to work with cygwin (CC-694). Patch by Rex Tener.

cc-config